prices section made and the overflow issue resolved

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ a{
 li{
   list-style: none;
 }
+button{
+  border: none;
+  outline: none;
+}
 #top_btn{
   display: none;
 }
